# enph253

./: .gitignore  README.md  design_calculations.xlsx  links.md
Electrical/: README.md
Electrical/design_blocks/: alarm_detector.d#1  alarm_detector.d#2  alarm_detector.d#8  alarm_detector.dbl  band_pass_filter.dbl  h_brigde.dbl  high_pass_filter.dbl  ir_detector.dbl  ir_edge_detection.dbl  new_h_bridge.dbl  opto_sensor.dbl  qrd.d#1  qrd.dbl  regulator.dbl  sonar_edge_detection.dbl
Mechanical/: parts.md
Presentation/: Block Diagram.xml  README.md  b2.xml  pressy.md
Software/: control_loop.xml  edges.py  edges_2.py  find_ewoks.py  frame_rate_test.py  mask_test.py  rgb_hsv_converter.py  take_video.py  video_to_image.py  wookie_finder_v2.py
Software/NeuralNet/: CMakeLists.txt  Makefile  README.md  bridge_nav.py  ewok_net.py  heading_err.cpp  heading_err.py  log.txt  main_control  make.py  makefile_draft.txt  rgb2hsv.py  robot.py  simpletest_raspicam_cv.cpp  test_net.py  train_net.py
Software/NeuralNet/darkflow/cython_utils/: cy_yolo2_findboxes.c  cy_yolo_findboxes.c  nms.c
Software/NeuralNet/darknet/: CMakeLists.txt  Makefile  config.cmake.in
Software/NeuralNet/darknet/examples/: art.c
Software/NeuralNet/darknet/python/: darknet.py
Software/NeuralNet/darknet/src/: image.c
Software/NeuralNet/raspicam-0.1.6/src/: CMakeLists.txt
Software/NeuralNet/videos/: full_course.m4v  gap.m4v
Software/NeuralNet/videos/bridge/: bridge_fast.mov  bridge_mask_mounted.m4v  bridge_slow.mov
Software/NeuralNet/videos/ewok/: ewok2.mov
test/: test.ino
(+207 files in other folders)
