cmake_minimum_required (VERSION 2.8) 
project (raspicam_test)
set (CMAKE_MODULE_PATH "/usr/local/lib/cmake/${CMAKE_MODULE_PATH}")
set (raspicam_DIR raspicam-0.1.6/build)
find_package(raspicam REQUIRED)
find_package(OpenCV)
find_package(darknet REQUIRED)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
	MESSAGE(STATUS "COMPILING OPENCV TESTS")
	add_executable (simpletest_raspicam_cv simpletest_raspicam_cv.cpp)  
	target_link_libraries (simpletest_raspicam_cv ${raspicam_CV_LIBS})
ELSE()
	MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()